# noted

./: .gitignore  README.md  design.txt  midicompiler.cabal  noted.cabal  stack.yaml  start_synth.sh  status.txt  taxonomy.txt
examples/: and.txt  ast1  comment  cp.mi  ex1  example.mi  fuck_you  fuck_you.bak  fuck_you2  fuck_you3  hard.mi  new  new.txt  new2.txt  new_lang  new_lang.mi  new_lang2  new_lang3  new_lang4  new_lang_small.txt  newline  partition1.mi  pat  program.mi  small  song1  subset_program.mi  test  test1  test1.mi  test2  test2.mi  test3.mi  tiny.mi  typing  var.mi
src/: Calc.hs  ConstraintGenerator.hs  Evaluator.hs  Importer.hs  Main.hs  Solver.hs  TermReducer.hs  Translator.hs  TypeChecker.hs  TypeChecker.hs~  TypeCheckerOld.hs
src/Calc/: .Lexer.x.swo  .Parser.y.swo  Lexer.x  Parser.hs  Parser.y
tests/: Definitions.hs  LexerTests.hs  ParserTests.hs  Tests.hs
