name:                noted
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/noted#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable noted-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
		     , Euterpea
                     , containers
                     , ghc
                     , mtl
  build-tool-depends:
                       alex:alex
                     , happy:happy

  other-modules:      Calc
		    , Calc.Lexer
		    , Calc.Parser
                    , ConstraintGenerator
                    , Solver
                    , TermReducer
                    , Translator


 

--test-suite lib-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      tests,
--		       src
--  main-is:             Tests.hs
--  other-modules:      Calc
--		    , Calc.Lexer
--		    , Calc.Parser
--                    , TypeChecker
----                    , Evaluator
----                    , ParserTests
--  build-depends:       base
--                     , tasty
--                     , tasty-hunit
--		     , array
--                     , containers
--                     , mtl
--                     , Euterpea
--  build-tool-depends:
--		      alex:alex
--		     , happy:happy
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
--
